--- a/group-a.yml
+++ b/group-a.yml
@@ -1,7 +1,10 @@
-all:
+group-a:
   hosts:
     nuc-1.lan:
     nuc-2.lan:
     nuc-3.lan:
     nuc-4.lan:
     nuc-5.lan:
+  vars:
+    # ansible_become: yes
+    # ansible_become_method: sudo
