--- a/abm_standalone_kvm.yml
+++ b/abm_standalone_kvm.yml
@@ -1,22 +1,20 @@
 
 ---
 
-- hosts: group-a
-  become: true
-  become_user: root
-  roles:
-    - common
-    - google-tools
-  vars:
-    tools_base_path: /tmp/abm-setup
-  # vars_files:
-  #   - /vars/external_vars.yml
-
+# Setup a baseline for all servers
 # Setup tools
 # gcloud
 # gsutil
 # kubectl
 # bmctl
+# Docker and container.d
+- hosts: config_server
+  become: true
+  become_user: root
+  roles:
+    - common
+    - google-tools
+
 
 # Provision KVM and 3 VMs
 
