Adding role to setup Ubuntu for ABM install. This will work on any Ubuntu 19.x+ (regardless of inside VM or on BM)

--- a/abm_standalone.yml
+++ b/abm_standalone.yml
@@ -8,12 +8,13 @@
 # kubectl
 # bmctl
 # Docker and container.d
-- hosts: config_server
+- hosts: all
   become: true
   become_user: root
   roles:
     - common
     - google-tools
+    - ready-ubuntu
 
 
 # Provision KVM and 3 VMs
