adding the template and framework for abm install. Currently able to generate the yaml file for creation

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,5 +1,10 @@
 ---
 
+- name: Dumping out vars for {{ cluster_name }}
+  debug:
+    msg: "Cluster name is {{ cluster_name }} "
+
+
 - name: Run the equivalent of "apt-get update" as a separate step
   apt:
     update_cache: yes
