--- a/roles/google-tools/vars/main.yml
+++ b/roles/google-tools/vars/main.yml
@@ -5,13 +5,15 @@
 google_project_id: "{{ lookup('env', 'PROJECT_ID') }}"
 
 # Scratch directory for tool installation
-tools_base_path: "/tmp/google-tools-install"
+tools_base_path: "/var/google-tools-install"
 
 # gcloud version to download
-gcloud_version: "322.0.0"
+gcloud_version: "330.0.0"
 
 # Local GSA Key (needs to be provided via command line vars)
 local_gsa_key: "{{ lookup('env', 'LOCAL_GSA_FILE') }}"
 
 # location of the GSA credentials file for gcloud initialization
-remote_gsa_key: "/tmp/keys"
+remote_gsa_key: "/var/keys"
+
+bmctl_version: "1.6.2"
