--- a/roles/abm-software/vars/main.yml
+++ b/roles/abm-software/vars/main.yml
@@ -4,4 +4,4 @@ acm_version: "latest"
 kubeconfig_shared_root: "/var/kubeconfig"
 kubeconfig_shared_location: "{{ kubeconfig_shared_root }}/kubeconfig"
 
-config_files: "/var/abm-configs"
+acm_config_files: "/var/acm-configs"
