--- a/roles/abm-software/vars/main.yml
+++ b/roles/abm-software/vars/main.yml
@@ -5,3 +5,5 @@ kubeconfig_shared_root: "/var/kubeconfig"
 kubeconfig_shared_location: "{{ kubeconfig_shared_root }}/kubeconfig"
 
 acm_config_files: "/var/acm-configs"
+
+root_repository_policy_dir: "/config"
