adding an option to create debugging and testing roles if needed, but not commit them to source

--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,10 @@ serving/
 # Downloaded model
 models/**/
 
-# Ansible building playbooks
+# Debugging & Testing Ansible
 build.yml
 build.yaml
+roles/test-*/
 
 # Generated configuration file
 k8s/overlays/**/configuration/*-hydrated.conf
