--- a/roles/abm-software/tasks/main.yml
+++ b/roles/abm-software/tasks/main.yml
@@ -18,6 +18,16 @@
   tags:
   - verify
 
+- name: Remove taint from master node
+  command:
+    cmd: kubectl taint nodes {{ cluster_name }} node-role.kubernetes.io/master:NoSchedule-
+  environment:
+    KUBECONFIG: "{{ kubeconfig_shared_location }}"
+  tags:
+  - abm-software
+  - abm-config
+  - onetime
+
 - name: Folder for ACM configurations
   file:
     path: '{{ acm_config_files }}'
@@ -54,9 +64,9 @@
 - name: "Test for config-management operator presence"
   include: kubectl-presence.yml
   vars:
-    name: "config-management"
+    name: "crds"
     type: "configmanagements.configmanagement.gke.io"
-    namespace: "config-management-system"
+    namespace: ""
     kubeconfig: "{{ kubeconfig_shared_location }}"
     fact_name: "has_acm_operator"
   tags:
@@ -95,9 +105,13 @@
   - acm-config-management
 
 - name: "Create Config Management Configuration"
-  command:
-    cmd: "kubectl apply -f {{ acm_config_files }}/config-management-configuration.yaml"
-  when: has_config_management == false
+  shell: |
+    kubectl apply -f {{ acm_config_files }}/config-management-configuration.yaml
+    sleep 5s
+    kubectl wait --for=condition=established --timeout=120s crd rootsyncs.configsync.gke.io
+    exit $?
+  when:
+    - has_config_management == false
   environment:
     KUBECONFIG: "{{ kubeconfig_shared_location }}"
   tags:
@@ -105,44 +119,86 @@
 
 #### Root Repo Configuration
 
-# - name: Copy config management configuration
-#   template:
-#     src: root-sync.yaml.j2
-#     dest: "{{ acm_config_files }}/root-sync.yaml"
-#   tags:
-#   - acm-root-repo
+- name: Copy config management configuration
+  template:
+    src: root-sync.yaml.j2
+    dest: "{{ acm_config_files }}/root-sync.yaml"
+  tags:
+  - acm-root-repo
 
-### Root Repo Secrets
+- name: "Test for Root Repo secret"
+  include: kubectl-presence.yml
+  vars:
+    name: "{{ root_repository_git_secret_name }}"
+    type: "secrets"
+    namespace: "config-management-system"
+    kubeconfig: "{{ kubeconfig_shared_location }}"
+    fact_name: "has_root_repo_secret"
+  tags:
+  - acm-root-repo
 
-# - name: "Test for Root Repo secret"
-#   include: kubectl-presence.yml
-#   vars:
-#     name: "{{ root_repository_git_secret_name }}"
-#     type: "secrets"
-#     namespace: "config-management-system"
-#     kubeconfig: "{{ kubeconfig_shared_location }}"
-#     fact_name: "has_root_repo"
-#   tags:
-#   - acm-root-repo
+- name: "Create secret token for Root Repo"
+  command:
+    cmd: "kubectl create secret generic {{ root_repository_git_secret_name }} --namespace='config-management-system' --from-literal='username={{ scm_token_user }}' --from-literal='token={{ scm_token_token }}'"
+  when: has_root_repo_secret == false
+  environment:
+    KUBECONFIG: "{{ kubeconfig_shared_location }}"
+  tags:
+  - acm-root-repo
 
-# - name: "Create secret token for Root Repo"
-#   command:
-#     cmd: "kubectl create ns config-management-system && kubectl create secret generic {{ root_repository_git_secret_name }} --namespace='config-management-system' --from-literal='username={{ scm_token_user }}''  --from-literal='token={{ scm_token_token }}'"
-#   when: has_root_repo == false
-#   environment:
-#     KUBECONFIG: "{{ kubeconfig_shared_location }}"
-#   tags:
-#   - acm-root-repo
+- name: "Test for Root Repo installed"
+  include: kubectl-presence.yml
+  vars:
+    name: "root-sync"
+    type: "RootSync"
+    namespace: "config-management-system"
+    kubeconfig: "{{ kubeconfig_shared_location }}"
+    fact_name: "has_root_repo_installed"
+  tags:
+  - acm-root-repo
 
-# - name: "Apply Root Repo configuration"
-#   command:
-#     cmd: "kubectl apply -f {{ acm_config_files }}/root-sync.yaml"
-#   when: has_root_repo == false
-#   environment:
-#     KUBECONFIG: "{{ kubeconfig_shared_location }}"
-#   tags:
-#   - acm-root-repo
+- name: "Apply Root Repo configuration"
+  shell: |
+    kubectl apply -f {{ acm_config_files }}/root-sync.yaml
+    sleep 5s
+    kubectl wait --for=condition=established --timeout=120s crd rootsyncs.configsync.gke.io
+    exit $?
+  # when: has_root_repo_installed == false
+  environment:
+    KUBECONFIG: "{{ kubeconfig_shared_location }}"
+  tags:
+  - acm-root-repo
 
+- name: "Test for Root Repo Ready"
+  include: kubectl-presence.yml
+  vars:
+    name: "root-reconciler"
+    type: "deployment"
+    namespace: "config-management-system"
+    kubeconfig: "{{ kubeconfig_shared_location }}"
+    fact_name: "has_root_repo_ready"
+  tags:
+  - acm-root-repo
 
-# kubectl get -n config-management-system deployment/root-reconciler
-# kubectl wait --for=condition=established --timeout=120s crd rootsyncs.configsync.gke.io
+### Get Token for Login (this might change with OIDC)
+- name: "Get login token for console"
+  shell: |
+    export SECRET_NAME=$(kubectl get serviceaccount console-cluster-reader -o jsonpath='{$.secrets[0].name}')
+    export KSA_TOKEN=$(kubectl get secret ${SECRET_NAME} -o jsonpath='{$.data.token}' | base64 --decode)
+    export TOKEN_NAME="{{ cluster_name }}-k8s-token"
+    echo $TOKEN_NAME
+  register: token
+  args:
+    executable: /bin/bash
+  environment:
+    KUBECONFIG: "{{ kubeconfig_shared_location }}"
+  when: has_root_repo_ready == true
+  tags:
+  - login-token
+
+- name: Display login token
+  debug:
+    msg: "{{ token.stdout }}"
+  when: has_root_repo_ready == true
+  tags:
+  - login-token
