--- a/roles/abm-software/tasks/main.yml
+++ b/roles/abm-software/tasks/main.yml
@@ -179,6 +179,7 @@
     fact_name: "has_root_repo_ready"
   tags:
   - acm-root-repo
+  - login-token
 
 ### Get Token for Login (this might change with OIDC)
 - name: "Get login token for console"
@@ -186,7 +187,7 @@
     export SECRET_NAME=$(kubectl get serviceaccount console-cluster-reader -o jsonpath='{$.secrets[0].name}')
     export KSA_TOKEN=$(kubectl get secret ${SECRET_NAME} -o jsonpath='{$.data.token}' | base64 --decode)
     export TOKEN_NAME="{{ cluster_name }}-k8s-token"
-    echo $TOKEN_NAME
+    echo $KSA_TOKEN
   register: token
   args:
     executable: /bin/bash
