--- a/abm_standalone.yml
+++ b/abm_standalone.yml
@@ -9,6 +9,7 @@
     - google-tools
     - ready-ubuntu
     - abm-install
+    - abm-software
   vars:
     # Initial project ID to setup gcloud with
     - google_project_id: "{{ lookup('env', 'PROJECT_ID') }}"
