--- a/abm_standalone.yml
+++ b/abm_standalone.yml
@@ -10,6 +10,7 @@
     - ready-ubuntu
     - abm-install
     - abm-software
+    - abm-login-token
   vars:
     # Initial project ID to setup gcloud with
     - google_project_id: "{{ lookup('env', 'PROJECT_ID') }}"
