--- a/roles/abm-software/tasks/main.yml
+++ b/roles/abm-software/tasks/main.yml
@@ -2,21 +2,21 @@
 # Install ACM
 #
 
-- name: Fail if local SCM_TOKEN_USER ENV is not defined
-  assert:
-    that:
-      - scm_token_user != ""
-    fail_msg: "The local environment variable 'SCM_TOKEN_USER' needs to be defined for the target Google Project ID"
-  tags:
-  - verify
+# - name: Fail if local SCM_TOKEN_USER ENV is not defined
+#   assert:
+#     that:
+#       - scm_token_user != ""
+#     fail_msg: "The local environment variable 'SCM_TOKEN_USER' needs to be defined for the target Google Project ID"
+#   tags:
+#   - verify
 
-- name: Fail if local SCM_TOKEN_TOKEN ENV is not defined
-  assert:
-    that:
-      - scm_token_token != ""
-    fail_msg: "The local environment variable 'SCM_TOKEN_TOKEN' needs to be defined for the target Google Project ID"
-  tags:
-  - verify
+# - name: Fail if local SCM_TOKEN_TOKEN ENV is not defined
+#   assert:
+#     that:
+#       - scm_token_token != ""
+#     fail_msg: "The local environment variable 'SCM_TOKEN_TOKEN' needs to be defined for the target Google Project ID"
+#   tags:
+#   - verify
 
 - name: Remove taint from master node
   command:
